tests/NormalTests/paczka1/fuzzy1/76237387.err
Error in line 1: qT7 S513 0,4
Error in line 5: xUiwo7Fkanz A955 72,1
Error in line 10: S621 S621 7,4
Error in line 17: fCBosV Sw13 9w,3
Error in line 18: qT7 S197 50,2
Error in line 28: 7zSXIZMe S:13 81,8
Error in line 23: S621 S621 80,5
Error in line 15: 7zSXIZMe S197 57,6
Error in line 30: S621 S197 69,1
Error in line 22: qT7 S621 83,2
Error in line 37: qT7 S197 6,5
